317 ==> 437103 - BadRequest when exporting to Onedrive.
318 ==> 437209 - Menu bar and toolbar backgrounds don't respect selected digiKam colorscheme (and instead inherit from global colorscheme).
319 ==> 431689 - Nokia 9 PureView DNG image demosaicing preview corruption.
320 ==> 437461 - Tag panel from left side-bar has people items unsorted.
321 ==> 252763 - Align album titles next to album thumbnails.
322 ==> 436671 - Similarity-Duplicates the active menu tab always moves to the first tab, no location memory.
323 ==> 437534 - Grouped items are not visible in the Table view when the View / Show All Grouped Items As Open menu is selected.
324 ==> 377632 - Problem with open grouped files.
325 ==> 437548 - In Table view Del removes Group Selected and second item to the trash.
326 ==> 431497 - Unconfiremd Faces Counter has an Offset.
327 ==> 437554 - Export to local Storage : Add an export with direct extension of the files in jpg (Not jpeg).
328 ==> 436695 - [opensuse 15.2] unable to resize images (all types).
329 ==> 427403 - Export multiple albums - Exported folder structure shall represent album structure.
330 ==> 436120 - [Suggestion] Keep the tree structure in "Export to a local device".
331 ==> 437655 - Store fuzzy search without a name.
332 ==> 437680 - Crash if Geolocation editor is closed while coordinates are still being updated.
333 ==> 437682 - Strange activity - If a year (2007) with date subdirectories is selected from the Album.
334 ==> 437708 - Face tag spanning entire image added for photos taken with Windows Phone.
335 ==> 437750 - digiKam causes 20 exiftool (32) .exe to run in the Task Manager panel at the end of the day W10.
336 ==> 437714 - A search group of this or another search is added to existing searches when editing them.
337 ==> 437769 - Search-Table view / After suspending - ERROR:directory_reader_win.cc(43).
338 ==> 437813 - Exiftool.exe is preventing the installation.
339 ==> 